name:                Albums
version:             0.1.0.0
synopsis:            An album
homepage:            https://fdp.io
license:             MIT
license-file:        LICENSE
author:              Fernando Paredes
maintainer:          nano@fdp.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


executable Albums
  main-is:             Main.hs
  build-depends:
      base >=4.9 && <4.10
    , either
    , aeson >= 0.8
    , servant
    , servant-server
    , wai
    , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
